# Youtube-English-Study-Summarizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  summarizer.py
src/: contents_generator.py  file_manager.py  main.py  markdown_maker.py  playlist_extractor.py  prompt.py  schemas.py
