[project]
name = "youtube-english-study-summarizer"
version = "0.1.0"
description = "A tool to help you study English by summarizing the contents of the video."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.1.26",
]
